turn on the welcome and fix the scrollbar

--- a/styles/app.css
+++ b/styles/app.css
@@ -242,7 +242,7 @@ nav .direct:hover .cursor {
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: var(--second-color);
 }
 
 @keyframes line-dash {
